[package]
name = "rocketmap-entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.1"
chrono = { version = "0.4.22", features = ["serde"] }
geo = { version = "0.23.0", features = ["use-serde"] }
once_cell = "1.15.0"
pogo-gamemaster-entities = { git = "https://github.com/nappa85/pogo-gamemaster-entities.git" }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["time"] }
tracing = "0.1.36"

[dev-dependencies]
tokio = { version = "1.21.1", features = ["time", "macros"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
