[package]
name = "rocketmap-entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
chrono = { version = "0.4.23", features = ["serde"] }
geo = { version = "0.23.1", features = ["use-serde"] }
once_cell = "1.17.0"
pogo-gamemaster-entities = { git = "https://github.com/nappa85/pogo-gamemaster-entities.git" }
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["time"] }
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.24.1", features = ["time", "macros"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde_path_to_error = "0.1.16"
